homogeneous/deploy/monitoring/stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heteroserve-monitoring
  labels:
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: heteroserve-monitoring
  labels:
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: &id001
      app: prometheus
      io.heteroserve.lab: heteroserve-lab
      app.kubernetes.io/part-of: heteroserve-monitoring
  template:
    metadata:
      labels: *id001
    spec:
      nodeSelector:
        kubernetes.io/hostname: heteroserve-lab-217
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: prometheus
        image: docker.io/prom/prometheus@sha256:6b41f7a45cfbd1d259a78701ee5e14fc2ad9383c9aa5d0427345a18539bc3c91
        imagePullPolicy: IfNotPresent
        args:
        - --config.file=/etc/prometheus/prometheus.json
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention.time=7d
        - --storage.tsdb.retention.size=5GB
        env: []
        ports:
        - name: http
          containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /-/ready
            port: http
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /-/ready
            port: http
          periodSeconds: 5
        volumeMounts:
        - name: config
          mountPath: /etc/prometheus
          readOnly: true
        - name: data
          mountPath: /prometheus
      volumes:
      - name: config
        configMap:
          name: monitoring-config
      - name: data
        persistentVolumeClaim:
          claimName: prometheus
      serviceAccountName: prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: heteroserve-monitoring
spec:
  selector:
    app: prometheus
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
  ports:
  - port: 9090
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: heteroserve-monitoring
  labels:
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: &id001
      app: grafana
      io.heteroserve.lab: heteroserve-lab
      app.kubernetes.io/part-of: heteroserve-monitoring
  template:
    metadata:
      labels: *id001
    spec:
      nodeSelector:
        kubernetes.io/hostname: heteroserve-lab-217
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: grafana
        image: docker.io/grafana/grafana@sha256:c474a2845f8cd51bf09c3f24e036225912fdb21cd0c87ac89527c395585bfa22
        imagePullPolicy: IfNotPresent
        args: []
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /api/health
            port: http
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          periodSeconds: 5
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        - name: config
          mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
          subPath: datasources.yaml
          readOnly: true
        - name: config
          mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
          subPath: dashboards.yaml
          readOnly: true
        - name: config
          mountPath: /etc/grafana/dashboards/dashboard.json
          subPath: dashboard.json
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: monitoring-config
      - name: data
        persistentVolumeClaim:
          claimName: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: heteroserve-monitoring
spec:
  selector:
    app: grafana
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
  ports:
  - port: 3000
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: heteroserve-monitoring
  labels:
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: &id001
      app: kube-state-metrics
      io.heteroserve.lab: heteroserve-lab
      app.kubernetes.io/part-of: heteroserve-monitoring
  template:
    metadata:
      labels: *id001
    spec:
      nodeSelector:
        kubernetes.io/hostname: heteroserve-lab-217
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: kube-state-metrics
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics@sha256:92b46557c71ecac53825772e4827dbcd9fca876b1950060f8fb2f2ef0d7a27af
        imagePullPolicy: IfNotPresent
        args:
        - --resources=nodes,pods,deployments,replicasets,daemonsets,poddisruptionbudgets
        - --namespaces=heteroserve,kube-system,heteroserve-monitoring
        env: []
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        startupProbe:
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
        volumeMounts: []
      volumes:
      - name: config
        configMap:
          name: monitoring-config
      serviceAccountName: kube-state-metrics
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: heteroserve-monitoring
spec:
  selector:
    app: kube-state-metrics
    io.heteroserve.lab: heteroserve-lab
    app.kubernetes.io/part-of: heteroserve-monitoring
  ports:
  - port: 8080
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-scrape
  namespace: heteroserve
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: heteroserve
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: heteroserve-monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 8000
